@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Tentative fix for bug #3054686: unarmed combat xp goes to sorcery by default.
+When checking for chosen_skill, talismans were taking into account, which
+is a mistake.
+Nicolas Weeger 2010-08-29
+
 Fix broken special foods. Duration wasn't updated as needed, making
 the force expire immediately.
 Nicolas Weeger 2010-08-28
